--- a/templates/partials/incoming_friend_requests.html
+++ b/templates/partials/incoming_friend_requests.html
@@ -1,4 +1,4 @@
-<h2>Incoming Friend Requests</h2>
+<h2 class="font-medium">Incoming Friend Requests</h2>
 <ul>
     {% for request in incoming_requests %}
         <li>
