--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,8 +1,9 @@
 {% load socialaccount %}
 {% load account %}
-<nav>
-    <ul>
+<nav class="w-full bg-indigo-500 text-white">
+    <ul class="w-full inline-flex items-center gap-5 p-4">
         <li><a href="{% url 'index' %}">Home</a></li>
+        <span class="flex-1"></span>
         {% if user.is_authenticated %}
             <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="{% url 'account_logout' %}">Logout</a></li>
