--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -30,6 +30,18 @@
             </div>
         </section>
     {% endif %}
+    {% if can_add_friend %}
+        <section id="add-friend">
+            <form action="{% url 'send_friend_request' profile_user.username %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="relative">
+                    <span
+                        class="absolute top-0 left-0 mt-1 ml-1 h-full w-full rounded bg-black"></span>
+                    <span class="fold-bold relative inline-block h-full w-full rounded border-2 border-black bg-white px-3 py-1 text-base font-bold text-black transition duration-100 hover:bg-indigo-500 hover:text-white">Add friend</span>
+                </button>
+            </form>
+        </section>
+    {% endif %}
     <section id="friends" hx-get="{% url 'friend_list' profile_user.username %}" hx-trigger="load, every 15s"
              hx-target="#friends-list">
         <h2 class="font-medium">Friends</h2>
