--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -3,6 +3,8 @@
 <nav class="w-full bg-indigo-500 text-white">
     <ul class="w-full inline-flex items-center gap-5 p-4">
         <li><a href="{% url 'index' %}">Home</a></li>
+        <li><a href="{% url 'blog_index' %}">Blog</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
         <span class="flex-1"></span>
         {% if user.is_authenticated %}
             <li><a href="{% url 'profile' %}">Profile</a></li>
