--- a/templates/partials/incoming_friend_requests.html
+++ b/templates/partials/incoming_friend_requests.html
@@ -5,10 +5,13 @@
             From: {{ request.creator.username }}
             <form method="post" action="{% url 'accept_friend_request' request.creator.username %}">
                 {% csrf_token %}
-                <button type="submit">Accept</button>
+                <button type="submit" class="relative">
+                    <span class="absolute top-0 left-0 mt-1 ml-1 h-full w-full rounded bg-black"></span>
+                    <span class="fold-bold relative inline-block h-full w-full rounded border-2 border-black bg-white px-3 py-1 text-base font-bold text-black transition duration-100 hover:bg-indigo-500 hover:text-white">Accept</span>
+                </button>
             </form>
         </li>
-        {% empty %}
+    {% empty %}
         <li>No incoming friend requests</li>
     {% endfor %}
 </ul>
