--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Thoughts</title>
+    {% if debug %}
+        {% compress css %}
+            <link rel="stylesheet" href="{% static 'src/output.css' %}">
+        {% endcompress %}
+    {% endif %}
     {% compress css %}
-        <link rel="stylesheet" href="{% static 'src/output.css' %}">
+        <link rel="stylesheet" href="{% static 'css/my_main.css' %}">
     {% endcompress %}
-{% compress css %}
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-{% endcompress %}
+    {% compress css %}
+        <link rel="stylesheet" href="{% static 'css/output.min.css' %}">
+    {% endcompress %}
     <script src="{% static 'js/htmx.min.js' %}" defer></script>
 </head>
 <body>
